[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
seq-macro = "0.3.5"
itertools = "0.12.1"
ahash = "0.8.11"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["stable"] }
lazy_static = "1.4.0"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true
